--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Project-united-minds-js</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <load scr="partials/header.html" />
+    <main>
+      <load scr="partials/hero.html" />
+      <load scr="partials/about.html" />
+      <load scr="partials/benefits.html" />
+      <load scr="partials/projects.html" />
+      <load scr="partials/faq.html" />
+      <load scr="partials/covers.html" />
+      <load scr="partials/reviews.html" />
+    </main>
+    <load scr="partials/footer.html" />
     <script type="module" src="./main.js"></script>
   </body>
 </html>
