--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,14 @@
     <load scr="partials/header.html" />
     <main>
       <load scr="partials/hero.html" />
-      <!-- <load scr="partials/about.html" />
+      <load scr="partials/about.html" />
       <load scr="partials/benefits.html" />
       <load scr="partials/projects.html" />
       <load scr="partials/faq.html" />
       <load scr="partials/covers.html" />
-      <load scr="partials/reviews.html" /> -->
+      <load scr="partials/reviews.html" />
     </main>
-    <!-- <load scr="partials/footer.html" />
-    <script type="module" src="./main.js"></script> -->
+    <load scr="partials/footer.html" />
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
