--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
       <load scr="partials/faq.html" />
       <load scr="partials/covers.html" />
       <load scr="partials/reviews.html" />
+      <button id="scrollToTopBtn"><svg class="icon-to-top">
+        <use href="./img/icons.svg#icon-btn"></use>
+      </svg></button>
     </main>
     <load scr="partials/footer.html" />
     <script type="module" src="./main.js"></script>
